Week 1: Part One Assignment

--- a/W1/Part Two/stylesheets/base.css
+++ b/W1/Part Two/stylesheets/base.css
@@ -6,7 +6,11 @@
 * http://www.opensource.org/licenses/mit-license.php
 * 6/20/2012
 */
-
+/*
+Name: Ramon Rafael G. Frias IV
+Assignment: Week One Part 2
+Date: 11 July 2014
+*/
 
 /* Table of Content
 ==================================================
@@ -51,9 +55,9 @@
 /* #Basic Styles
 ================================================== */
 	body {
-		background: #fff;
-		font: 14px/21px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-		color: #444;
+		background: #F30;
+		font: 14px/21px "Times New Roman", Helvetica, Arial, sans-serif;
+		color: #FFF;
 		-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 		-webkit-text-size-adjust: 100%;
  }
@@ -63,15 +67,11 @@
 ================================================== */
 	h1, h2, h3, h4, h5, h6 {
 		color: #181818;
-		font-family: "Georgia", "Times New Roman", serif;
+		font-family: "Courier New", "Times New Roman", serif;
 		font-weight: normal; }
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
-	h1 { font-size: 46px; line-height: 50px; margin-bottom: 14px;}
-	h2 { font-size: 35px; line-height: 40px; margin-bottom: 10px; }
-	h3 { font-size: 28px; line-height: 34px; margin-bottom: 8px; }
-	h4 { font-size: 21px; line-height: 30px; margin-bottom: 4px; }
-	h5 { font-size: 17px; line-height: 24px; }
-	h6 { font-size: 14px; line-height: 21px; }
+	h1 { font-size: 46px; line-height: 100px; margin-bottom: 14px; color: white; background: linear-gradient(to right, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); border-radius: 12px; padding-left: 20px;}
+	h3 { font-size: 28px; line-height: 34px; margin-bottom: 8px; border: solid 1px #FFFFFF; border-radius: 12px;padding-left: 10px; background-color: white;}
 	.subheader { color: #777; }
 
 	p { margin: 0 0 20px 0; }
@@ -96,7 +96,7 @@
 ================================================== */
 	a, a:visited { color: #333; text-decoration: underline; outline: 0; }
 	a:hover, a:focus { color: #000; }
-	p a, p a:visited { line-height: inherit; }
+	p a, p a:visited { line-height: inherit;}
 
 
 /* #Lists
