--- a/W1/Part Two/stylesheets/layout.css
+++ b/W1/Part Two/stylesheets/layout.css
@@ -6,6 +6,11 @@
 * http://www.opensource.org/licenses/mit-license.php
 * 6/20/2012
 */
+/*
+Name: Ramon Rafael G. Frias IV
+Assignment: Week One Part 2
+Date: 11 July 2014
+*/
 
 /* Table of Content
 ==================================================
