Part One Assignment W1

--- a/W1/Part One/css/style.css
+++ b/W1/Part One/css/style.css
@@ -93,7 +93,7 @@
 p[class~="blue"]{
 	color: red;}
 /*---------------------------Structural Pseudo-Classes (any)---------------------------*/
-P:only-child{
+p:only-child{
 	font-style: italic;
 	text-align: center;}
 /*---------------------------nTH Sekector---------------------------*/
