Week 4 project done

--- a/W2/w2project/css/custom.css
+++ b/W2/w2project/css/custom.css
@@ -16,6 +16,9 @@ body {
 }
 
 /*------------------------------ NAVIGATION ------------------------------*/
+.padForNavbar {
+	padding: 0.5em 0;
+}
 .navbar-inverse .navbar-toggle {
 	color: white;
 	font-weight: bold;
