--- a/W3/css/style.css
+++ b/W3/css/style.css
@@ -72,7 +72,7 @@ a:hover, a:active, a:focus {
 	background-color: #d9534f;
 	color: #000;
 	cursor: pointer;
-	transform: translate(900px, 0);
+	transform: translate(100%, 0);
 }
 /*------------------------------ JUMBOTRON ------------------------------*/
 .jumbotron{
